# product_ocr

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: main.py  prompt.py
app/api/: routes.py
app/core/: config.py
app/models/: schemas.py
app/services/: ocr_service.py
