[project]
name = "ocr-staging"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.117.1",
    "langchain-core==0.3.28",
    "langchain-google-genai==2.0.7",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "requests==2.32.3",
    "typing-extensions==4.12.2",
    "urllib3==2.3.0",
    "uvicorn[standard]==0.37.0",
]
